<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.activity.DeploymentActivity">

    <include
        layout="@layout/tb_deployment"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Region Soldier -->
            <LinearLayout
                style="@style/linear_layout_row_type"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_soldier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin8"
                    app:hintEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_enter_soldier_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="24"
                        android:hint="@string/tr_enter_soldier_name"
                        android:textSize="@dimen/text_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_soldier"
                    style="@style/btn_row_type"
                    android:text="@string/tr_add_soldier_name" />


            </LinearLayout>


            <!-- Region City -->

            <LinearLayout
                style="@style/linear_layout_row_type"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:layout_margin="@dimen/margin8"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tr_enter_city_name"
                        android:inputType="text"
                        android:maxLength="16"
                        android:textSize="@dimen/text_medium" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_city"
                    style="@style/btn_row_type"
                    android:text="@string/tr_add_city" />


            </LinearLayout>

            <!-- Region Deployment -->



            <LinearLayout
                style="@style/linear_layout_row_type"
                android:orientation="vertical"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_deployment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <!-- Trick for symmetrical view -->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:visibility="invisible"
                    android:layout_margin="@dimen/margin8"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tr_enter_city_name"
                        android:inputType="number"
                        android:textSize="@dimen/text_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_deploy_soldier"
                        style="@style/btn_row_type"
                        android:text="@string/tr_deploy" />


            </LinearLayout>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>





</LinearLayout>